--- a/AngularWeb/angular.json
+++ b/AngularWeb/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/datatables.net-dt/css/jquery.dataTables.css"
@@ -94,6 +95,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
@@ -126,6 +128,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "AngularWeb"
 }
